<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="str_filter">过滤</string>
    <string name="str_filterdata">过滤数据</string>
    <string name="str_startadr4">起始地址(bit)</string>
    <string name="str_filterbank">过滤bank</string>
    <string name="str_match">匹配</string>
    <string name="str_nomatch">不匹配</string>
    <string name="str_disable">不启用</string>
    <string name="str_enable">启用</string>
    <string name="str_pwd">密码</string>
    <string name="str_acpwd">访问密码</string>
    <string name="str_paramset">设置</string>
    <string name="str_paramget">获取</string>
    <string name="str_filterdisable">不启用过滤</string>
    <string name="str_filterenable">启用过滤</string>
    <string name="str_ant">天线</string>
    <string name="str_one">唯一</string>
    <string name="str_bank">区域</string>

    <string name="app_name">UHF_Demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_system">系统配置</string>
    <string name="path_location_button_select">选择</string>
    <string name="systemlayout_textView_system_tv">参数</string>
    <string name="systemlayout_button_saveparam">保存参数</string>
    <string name="systemlayout_button_paramdefault">默认参数</string>
    <string name="systemlayout_textView_thread">方式</string>
    <string name="systemlayout_textView_see">浏览</string>
    <string name="systemlayout_textView_export">导出</string>
    <string name="systemlayout_textView_exportxt">导出(.txt,.csv)</string>
    <string name="systemlayout_textView_reftm">刷新时间</string>

    <string name="indicatorlayout_tv_indicator">天线参数</string>
    <string name="tab1_textView_pm">电源管理</string>
    <string name="tab1_textView_pf">平台选择</string>
    <string name="tab1_textView_connection">连接读写器</string>
    <string name="tab1_textView_adr">地址</string>
    <string name="tab1_textView_antport">天线口</string>
    <string name="tab1_button_connect">连接</string>
    <string name="tab1_button_disconnect">断开</string>
    <string name="tab1_textView_info">信息</string>
    <string name="tab1_textView_mdt">模块</string>

    <string name="tab2_button_start">开始</string>
    <string name="tab2_button_stop">停止</string>
    <string name="tab2_button_readclear">清除</string>
    <string name="tab2_textView_oncecnt">本次读到标签个数：</string>
    <string name="tab2_textView_tocnt">        共读到标签个数：</string>
    <string name="tab2_textView_set_status">设备状态：</string>

    <string name="tab3_lock_textView_lockopt">锁操作选项</string>
    <string name="tab3_lock_textView_lockbk">锁区域</string>
    <string name="tab3_lock_textView_locktp">锁类型</string>
    <string name="tab3_lock_button_lock">锁</string>
    <string name="tab3_lock_button_kill">销毁</string>

    <string name="tab3_read_textView_rbk">选择读写器区域</string>
    <string name="tab3_read_textView_rbank">区域</string>
    <string name="tab3_read_textView_opstadr">起始地址</string>
    <string name="tab3_read_textView_opblock">块数</string>
    <string name="tab3_read_button_read">读</string>
    <string name="tab3_read_button_write">写</string>
    <string name="tab3_read_button_wepc">写epc</string>

    <string name="tab3_TextView_dtp">数据类型</string>
    <string name="tab3_RadioButton_hex">十六进制</string>

    <string name="tab3_textView_tb3opant">操作天线</string>

    <string name="tab4_atpw_TextView_antpck">天线检测</string>
    <string name="tab4_atpw_radio_tb4nck">不检测</string>
    <string name="tab4_atpw_radio_tb4ck">检测</string>
    <string name="tab4_atpw_textView_tab4pw">功率</string>
    <string name="tab4_atpw_textView_ant1_pwr">天线1 读功率 </string>
    <string name="tab4_atpw_textView_tab4wp">写功率</string>
    <string name="tab4_atpw_TextView_tb4a2rp">天线2 读功率 </string>
    <string name="tab4_atpw_textView_tb4a3rp">天线3 读功率 </string>
    <string name="tab4_atpw_textView_tba4rp">天线4 读功率 </string>

    <string name="tab4_gen2_TextView_g2q">Q值</string>
    <string name="tab4_gen2_textView_tb4g2wm">写模式 </string>
    <string name="tab4_gen2_textView_tb4g2ml">最大长度 </string>
    <string name="tab4_gen2_TextView_tb4g2cd">gen2编码 </string>

    <string name="tab4_emd_TextView_tb4_emdda">附加数据</string>
    <string name="tab4_emd_textView_tb4_bcnt">字节数 </string>

    <string name="tab4_fre_TextView_tb4fre">频率</string>
    <string name="tab4_fre_checkBox_allselect">全选 </string>
    <string name="tab4_fre_button_getfre">查看频点 </string>
    <string name="tab4_fre_button_setfre">设置频点 </string>


    <string name="tab4_usl_textView_tb4invpro">盘点协议</string>
    <string name="tab4_usl_TextView_tb4oppro">操作协议 </string>
    <string name="tab4_usl_checkBox_ant1">天线1  </string>
    <string name="tab4_usl_checkBox_ant2">天线2  </string>
    <string name="tab4_usl_checkBox_ant3">天线3  </string>
    <string name="tab4_usl_checkBox_ant4">天线4  </string>
    <string name="tab4_usl_TextView_tb4rtm">时长 </string>
    <string name="tab4_usl_textView_tb4invtm">盘点时间 </string>
    <string name="tab4_usl_textView_read_inve">间隔 </string>

    <string name="tab4_ot_textView_tempu">温度 </string>
    <string name="tab4_ot_textView_tb4otaoe">天线唯一性</string>
    <string name="tab4_ot_TextView_tb4otdaoe">附加数据唯一性</string>
    <string name="tab4_ot_TextView_tb4otrhr">记录最高RSSI</string>
    <string name="tab4_ot_TextView_tb4otinvmo">盘存模式 </string>
    <string name="tab4_ot_TextView_tb46btd">Iso180006b调整深度 </string>

    <string name="tab4_qk_textView_tempu">停顿时间比 </string>
    <string name="tab4_qk_textView_returnitem">返回标签数据项</string>
    <string name="tab4_qk_TextView_count">次数</string>
    <string name="tab4_qk_TextView_time">时间</string>
    <string name="tab4_qk_TextView_pro">协议 </string>
    <string name="tab4_qk_TextView_qkebqmd">一键开启1200高速模式 </string>
    <string name="tab4_qk_TextView_bt1">开启(最大功率,S1,间隔0)</string>
    <string name="tab4_qk_TextView_bt0">开启(最大功率,S0,间隔0) </string>

    <string name="Constr_READ">读 </string>
    <string name="Constr_CONNECT">连接 </string>
    <string name="Constr_INVENTORY">盘点 </string>
    <string name="Constr_RWLOP">读写锁 </string>
    <string name="Constr_set">设置 </string>
    <string name="Constr_SetFaill">设置失败： </string>
    <string name="Constr_GetFaill">获取失败： </string>
    <string name="Constr_SetOk">设置成功 </string>
    <string name="Constr_unsupport">不支持 </string>
    <string name="Constr_Putandexit">再按一次退出程序 </string>
    <string name="Constr_stopscan">请先停止扫描 </string>
    <string name="Constr_hadconnected">已经连接 </string>
    <string name="Constr_plsetuuid">请设置好UUID: </string>
    <string name="Constr_pwderror">密码错误 </string>
    <string name="Constr_search">搜索 </string>
    <string name="Constr_stop">停止 </string>
    <string name="Constr_createreaderok">读写器创建失败 </string>
    <string name="Constr_sub3readmem">读标签 </string>
    <string name="Constr_sub3writemem">写标签 </string>
    <string name="Constr_sub3lockkill">锁与销毁 </string>
    <string name="Constr_sub3readfail">读失败: </string>
    <string name="Constr_sub3nodata">无数据 </string>
    <string name="Constr_sub3wrtieok">写成功 </string>
    <string name="Constr_sub3writefail">写失败: </string>
    <string name="Constr_sub3lockok">锁成功 </string>
    <string name="Constr_sub3lockfail">锁失败: </string>
    <string name="Constr_sub3killok">销毁成功 </string>
    <string name="Constr_sub3killfial">销毁失败: </string>
    <string name="Auto">自动 </string>
    <string name="No">无 </string>
    <string name="Constr_sub4invenpra">盘点参数 </string>
    <string name="Constr_sub4antpow">天线功率 </string>
    <string name="Constr_sub4regionfre">区域频率 </string>
    <string name="Constr_sub4gen2opt">Gen2项 </string>
    <string name="Constr_sub4invenfil">盘点过滤 </string>
    <string name="Constr_sub4addidata">附加数据 </string>
    <string name="Constr_sub4others">其他参数 </string>
    <string name="Constr_sub4quickly">快速模式 </string>
    <string name="Constr_sub4setmodefail">配置模式失败 </string>
    <string name="Constr_sub4setokresettoab">设置成功，重启读写器生效 </string>
    <string name="Constr_sub4ndsapow">该设备需要功率一致 </string>
    <string name="Constr_sub4unspreg">不支持的区域 </string>
    <string name="Constr_subblmode">模式 </string>
    <string name="Constr_subblinven">盘点 </string>
    <string name="Constr_subblfil">过滤 </string>
    <string name="Constr_subblfre">频率 </string>
    <string name="Constr_subblnofre">没有选择频点 </string>
    <string name="Constr_subcsalterpwd">改密码 </string>
    <string name="Constr_subcslockwpwd">带密码锁 </string>
    <string name="Constr_subcslockwoutpwd">不带密码锁 </string>
    <string name="Constr_subcsplsetimeou">请设置超时时间 </string>
    <string name="Constr_subcsputcnpwd">填入当前密码与新密码 </string>
    <string name="Constr_subcsplselreg">请选择区域 </string>
    <string name="Constr_subcsopfail">操作失败 </string>
    <string name="Constr_subcsputcurpwd">填入当前密码 </string>
    <string name="Constr_subdbdisconnreconn">已经断开,正在重新连接 </string>
    <string name="Constr_subdbhadconnected">已经连接 </string>
    <string name="Constr_subdbconnecting">正在连接...... </string>
    <string name="Constr_subdbrev">接收 </string>
    <string name="Constr_subdbstop">停止 </string>
    <string name="Constr_subdbdalennot">数据长度不对 </string>
    <string name="Constr_subdbplpuhexchar">请输入16进制字符 </string>
    <string name="Constr_subsysaveok">保存成功 </string>
    <string name="Constr_subsysout">输入txt或者csv </string>
    <string name="Constr_subsysreavaid">重新连接生效 </string>
    <string name="Constr_sub1recfailed">重新连接失败 </string>
    <string name="Constr_subsysavefailed">保存失败 </string>
    <string name="Constr_subsysexefin">执行完毕 </string>
    <string name="Constr_sub1adrno">地址没有输入 </string>
    <string name="Constr_sub1pdtsl">请选择平台 </string>
    <string name="Constr_mainpu">上电： </string>
    <string name="Constr_nostopstreadfailed">不停顿盘点启动失败 </string>
    <string name="Constr_nostopspreadfailed">不停顿盘点停止失败 </string>
    <string name="Constr_nostopreadfailed">开始盘点失败： </string>
    <string name="Constr_connectok">连接成功 </string>
    <string name="Constr_connectfialed">连接失败 </string>
    <string name="Constr_disconpowdown">断开读写器，下电： </string>
    <string name="Constr_ok">成功: </string>
    <string name="Constr_failed">失败: </string>
    <string name="Constr_excep">异常: </string>
    <string name="Constr_setcep">设置异常: </string>
    <string name="Constr_getcep">获取异常: </string>
    <string name="Constr_killok">KILL成功 </string>
    <string name="Constr_killfailed">KILL失败 </string>
    <string name="Constr_psiant">请选择盘点天线 </string>
    <string name="Constr_selpro">请选择协议 </string>
    <string name="Constr_setpwd">设置功率: </string>
    <string name="action_qt">QT 功能 </string>

</resources>
