<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="#BFEFFF" />

        <TextView
            android:id="@+id/textView_pm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab1_textView_pm"
            android:textColor="#ff1493"
            android:textSize="18sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView_pf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tab1_textView_pf"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner_pdatype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <View
            android:id="@+id/view1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="#BFEFFF" />

        <TextView
            android:id="@+id/textView_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab1_textView_connection"
            android:textColor="#ff1493"
            android:textSize="18sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView_adr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tab1_textView_adr"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editText_adr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView_antpt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tab1_textView_antport"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner_antports"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab1_button_connect" />

        <Button
            android:id="@+id/button_disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab1_button_disconnect" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <View
                android:id="@+id/View03"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="#BFEFFF" />

            <TextView
                android:id="@+id/TextView_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab1_textView_info"
                android:textColor="#ff1493"
                android:textSize="18sp" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_mdt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tab1_textView_mdt" />

            <TextView
                android:id="@+id/textView_module"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="..." />
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
    <ProgressBar
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>